# example

./: README.md
cordova/: app.js  home.html  login.html  methods.js
nodejs/dpe-module/: index.js
nodejs/dpe-module/constants/: errors.js  index.js
nodejs/dpe-module/controllers/: LeadFlowController.js  index.js
nodejs/dpe-module/dto/: LeadFlowQuery.js  index.js
nodejs/dpe-module/guards/: index.js  leadFlow.js  leadFlowDownload.js
nodejs/dpe-module/routes/: index.js  leadFlow.js
nodejs/dpe-module/schemas/: controllersSchemas.js  index.js  ioSchemas.js
nodejs/dpe-module/services/: PaginationService.js  index.js
nodejs/dpe-module/use-cases/: GetStateUseCase.js  index.js
python/: README.md  pyproject.toml
python/leadflow_events_processor/: settings.py
python/leadflow_events_processor/common/: constants.py  enums.py  exceptions.py  settings_models.py  signal_handlers.py  typing.py
python/leadflow_events_processor/entities/: event.py
python/leadflow_events_processor/services/events_processor/: processor.py  run.py  settings.py
python/leadflow_events_processor/services/synchronize/: base.py  behaviours.py  comment.py  contact.py  factory.py
python/tests/: conftest.py  constants.py
python/tests/unit_tests/services/events_processor/: conftest.py  test_processor.py
python/tests/unit_tests/services/sinchronize/: conftest.py  test_comment.py  test_contact.py  utils.py
react/DiagnosisPerformanceEnergy/: DiagnosisPerformanceEnergy.jsx  DiagnosisPerformanceEnergy.scss
react/DiagnosisPerformanceEnergy/LeadsFeed/: LeadsFeed.jsx  LeadsFeed.scss
yii2-api/controllers/: CampainController.php  SiteController.php
yii2-api/entities/: Campain.php
yii2-api/forms/: LoginForm.php  PasswordResetRequestForm.php  SignupForm.php  StatisticForm.php
yii2-backend/controllers/: AreaController.php  BaseSiteController.php  CampainController.php  CityController.php  SiteController.php
yii2-backend/search/: AreaSearch.php  CampainSearch.php  CitySearch.php
yii2-frontend/controllers/: BountyController.php  CabinetController.php  EmailController.php  SiteController.php
yii2-frontend/entities/: BalanceLog.php  BountyQuest.php  Country.php  Lang.php  LogRaport.php  Novelty.php  SocUser.php  Subscribe.php  User.php  UserProfile.php
yii2-frontend/forms/: BountyRequestForm.php  BountySignUpForm.php  ContactForm.php  LoginForm.php  SignUpForm.php  SubscribeForm.php
(+74 files in other folders)
